--- a/.gitignore
+++ b/.gitignore
@@ -18,9 +18,6 @@
 
 # Project-local glide cache, RE: https://github.com/Masterminds/glide/issues/736
 .glide/
+build/
 vendor/
-output/
 mocks
-
-di.go
-
